# AI_Agents

./: README.md  pyproject.toml
src/content_creation_multi_crew_pipeline/: main.py  pipeline.py
src/content_creation_multi_crew_pipeline/crews/research_crew/: research_crew.py
src/content_creation_multi_crew_pipeline/crews/research_crew/config/: agents.yaml  tasks.yaml
src/content_creation_multi_crew_pipeline/crews/review_crew/: review_crew.py
src/content_creation_multi_crew_pipeline/crews/review_crew/config/: agents.yaml  tasks.yaml
src/content_creation_multi_crew_pipeline/crews/writing_crew/: writing_crew.py
src/content_creation_multi_crew_pipeline/crews/writing_crew/config/: agents.yaml  tasks.yaml
src/my_ai_learning/: agents.py  crew.py  main.py  old_main.py  tasks.py
src/my_ai_learning/config/: agents.yaml  tasks.yaml
src/my_ai_learning/output/: summary.md
src/my_ai_learning_intermediate/: tasks.py
src/web_research_agent/: crew.py  main.py
src/web_research_agent/config/: agents.yaml  tasks.yaml
src/web_search_agent_w_memory/: crew.py  main.py
src/web_search_agent_w_memory/config/: agents.yaml  tasks.yaml
