[project]
name = "my_ai_learning"
version = "0.1.0"
description = "my_ai_learning using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai==1.12.2"
]

[project.scripts]
my_ai_learning = "my_ai_learning.main:run"
run_crew = "my_ai_learning.main:run"
train = "my_ai_learning.main:train"
replay = "my_ai_learning.main:replay"
test = "my_ai_learning.main:test"
run_with_trigger = "my_ai_learning.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
